Web Inspector: hide vertical-sidebar-split in dock-to-right mode behind single experimental flag. https://bugs.webkit.org/show_bug.cgi?id=110119
Reviewed by Vsevolod Vlasov.

Removed context menus, made it toggle automatically upon dock orientation change.

* inspector/front-end/DockController.js:
(WebInspector.DockController.prototype._toggleDockState):
* inspector/front-end/ElementsPanel.js:
(WebInspector.ElementsPanel):
(WebInspector.ElementsPanel.prototype._sidebarContextMenuEventFired):
(WebInspector.ElementsPanel.prototype._dockSideChanged):
(WebInspector.ElementsPanel.prototype._setVerticalSplit):
* inspector/front-end/ScriptsPanel.js:
(WebInspector.ScriptsPanel):
(WebInspector.ScriptsPanel.prototype._appendUISourceCodeItems):
(WebInspector.ScriptsPanel.prototype._dockSideChanged):
* inspector/front-end/Settings.js:
(WebInspector.ExperimentsSettings):
* inspector/front-end/inspector.css:
* inspector/front-end/scriptsPanel.css:
(#scripts-sidebar-stack-pane):
(div.sidebar-pane-stack#scripts-debug-sidebar-contents):
* inspector/front-end/tabbedPane.css:
(.tabbed-pane):

Canonical link: https://commits.webkit.org/128422@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@143224 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebCore/inspector/front-end/inspector.css
+++ b/Source/WebCore/inspector/front-end/inspector.css
@@ -2016,13 +2016,6 @@ button.show-all-nodes {
     background-image: -webkit-gradient(linear, left top, left bottom, from(rgb(194, 194, 194)), to(rgb(239, 239, 239)));
 }
 
-body.inactive .panel-enabler-view button:not(.status-bar-item), .panel-enabler-view button:disabled:not(.status-bar-item), body.inactive .pane-title-button, .pane-title-button:disabled, body.inactive button.show-all-nodes {
-    color: rgb(130, 130, 130);
-    border-color: rgb(212, 212, 212);
-    background-color: rgb(239, 239, 239);
-    background-image: -webkit-gradient(linear, left top, left bottom, from(rgb(250, 250, 250)), to(rgb(235, 235, 235)));
-}
-
 button.enable-toggle-status-bar-item .glyph {
     -webkit-mask-position: -192px 0;
 }
